# AutomotiveSystemManagement

./: CMakeLists.txt  automotiveManagement.doc  automotiveManagement.odt  main.cpp  tests.txt
database/: automotiveDatabase.sqlite  vehicleDatase.sqlite
include/: DTCManagement.h  alertManagement.h  create.h  dataAnalyze.h  obdInterface.h  realTimeData.h  vehicleManagement.h
src/: DTCManagement.cpp  alertManagement.cpp  create.cpp  dataAnalyze.cpp  obdInterface.cpp  realTimeData.cpp  vehicleManagement.cpp
